fixed overflowing a tags on donate and join pages

--- a/resources/hacksburg.css
+++ b/resources/hacksburg.css
@@ -331,7 +331,7 @@ body {
 	line-height: 1.4;
 }
 
-.post_text a {
+a {
 	color: var(--darker_green);
 }
 
@@ -432,8 +432,8 @@ body {
 	text-decoration: none;
 }
 
-.button_link {
-	text-decoration: none;
+.button .green {
+	color: var(--white);
 }
 
 .rsvp_button {
